plugins {
    id 'java'
    id 'groovy'
}

group 'io.github.lsikora'
version '1.0-SNAPSHOT'

repositories {
    jcenter()
}

sourceCompatibility = JavaVersion.VERSION_12
targetCompatibility = JavaVersion.VERSION_12

tasks.withType(JavaCompile).each {
    it.options.compilerArgs.add('--enable-preview')
}

test {
    jvmArgs(['--enable-preview'])
    useJUnitPlatform()
    /*Uncomment for running only tagged tests*/
//    useJUnitPlatform{
//        includeTags 'Fast', 'Slow'
//    }
    testLogging {
        events "passed", "skipped", "failed", "started", "standard_out",
                "standard_error"
    }

}

dependencies {
    testImplementation group: 'org.assertj',
            name: 'assertj-core',
            version: '3.12.1'
    testImplementation group: 'eu.codearte.catch-exception',
            name: 'catch-exception',
            version: '1.4.6'
    testImplementation group: 'eu.codearte.catch-exception',
            name: 'catch-throwable',
            version: '1.4.6'
/*    todo update slide to show that separet junit 4.12 dependency is not 
    longer needed as it is now compile time dependency in vintage engine */
    testImplementation platform('org.junit:junit-bom:5.5.0') {
        testImplementation group: 'org.junit.jupiter',
                name: 'junit-jupiter'
        testRuntimeOnly group: 'org.junit.vintage',
                name: 'junit-vintage-engine'
    }
    
    testImplementation group: 'org.spockframework',
            name: 'spock-core',
            version: '1.3-groovy-2.5'
    testImplementation group: 'org.codehaus.groovy',
            name: 'groovy-all',
            version: '2.5.0'
    testImplementation group: 'pl.pragmatists',
            name: 'JUnitParams',
            version: '1.1.1'
    testImplementation group: 'org.mockito',
            name: 'mockito-core',
            version: '2.2.5'
    testImplementation group: 'org.mockito',
            name: 'mockito-junit-jupiter',
            version: '2.25.0'
    testImplementation group: 'com.github.rweisleder',
            name: 'jfairy-junit-extension',
            version: '0.2.0'
}



